fix: edit dark mode table style

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -843,11 +843,11 @@ a.zola-anchor {
     color: $overlay-color-dark;
   }
   table, td, th, tr {
-    border: 1px solid lighten($black, 42%);
+    border-color: lighten($black, 42%);
   }
   thead {
     background-color: lighten($black, 15%);
-    border: 1px solid lighten($black, 42%);
+    border-color: lighten($black, 42%);
   }
   .btn {
     background-color: lighten($black, 7%);
